--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash.debounce": "^4.0.8",
     "md5": "2.2.1",
     "nzh": "^1.0.2",
-    "t8t-element-ui": "^1.9.0",
+    "t8t-element-ui": "1.10.0",
     "url": "0.11.0",
     "vue": "2.2.1",
     "vue-echarts-v3": "^1.0.3",
