--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "element-ui": "1.2.3",
     "html2canvas": "^0.5.0-beta4",
     "js-cookie": "2.1.3",
-    "lodash.debounce": "^4.0.8",
+    "lodash": "^4.17.4",
+    "lodash.debounce": "4.0.8",
     "md5": "2.2.1",
     "nzh": "^1.0.2",
     "t8t-element-ui": "1.10.0",
@@ -35,6 +36,7 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.21.2",
